Fixed overflow bug

--- a/src/component/nav.css
+++ b/src/component/nav.css
@@ -5,7 +5,7 @@
     color: #37b24d;
     background-color: white;
     height: 4rem;
-    width: 100vw;
+    width: 100%;
     font-size: 20px;
 }
 
